--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        roomVersion = '2.1.+'
+        archLifecycleVersion = '2.0.0'
+    }
+
     repositories {
         google()
         jcenter()
