add barcode detect

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
+
+    // Use the most recent version of CameraX, currently that is alpha04
+    implementation "androidx.camera:camera-core:1.0.0-alpha04"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha04"
+
 }
+
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle plugin
