--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$rootProject.roomVersion"
     annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
 
+    implementation 'com.google.firebase:firebase-ml-vision:23.0.0'
+
+    // Use the most recent version of CameraX, currently that is alpha04
+    implementation "androidx.camera:camera-core:1.0.0-alpha04"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha04"
+
 }
+apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle
