--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".MyMedApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyMedApplication"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".activities.doctors.AppointmentsActivity"
+            android:label="@string/title_activity_appointments"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="barcode" />
@@ -33,9 +38,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.search.SearchMedicineActivity"></activity>
-        <activity android:name=".activities.doctors.DoctorInfoActivity"></activity>
-        <activity android:name=".activities.medicine.MedicineInfoActivity"></activity>
+        <activity android:name=".activities.search.SearchMedicineActivity" />
+        <activity android:name=".activities.doctors.DoctorInfoActivity" />
+        <activity android:name=".activities.medicine.MedicineInfoActivity" />
     </application>
 
 </manifest>
