change to linearlayout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,27 +3,21 @@
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="il.ac.huji.cs.postpc.mymeds">
 
-    <dist:module dist:instant="true" />
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
-
     <application
+        android:name=".MyMedApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyMedApplication"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
-            android:value="barcode" />
+        <activity android:name=".activities.medicine.MedicineEditorActivity"></activity>
 
         <activity
             android:name=".activities.home.HomeActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_home" />
+
         <activity
             android:name=".activities.loading.LoadingActivity"
             android:theme="@style/Theme.Transparent">
@@ -33,9 +27,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.search.SearchMedicineActivity"></activity>
-        <activity android:name=".activities.doctors.DoctorInfoActivity"></activity>
-        <activity android:name=".activities.medicine.MedicineInfoActivity"></activity>
+        <activity android:name=".activities.search.SearchMedicineActivity" />
+        <activity android:name=".activities.doctors.DoctorInfoActivity" />
+        <activity android:name=".activities.medicine.MedicineInfoActivity" />
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <dist:module dist:instant="true" />
 
 </manifest>
