done working on the views of the appointments!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,8 @@
         <activity android:name=".activities.search.SearchMedicineActivity"></activity>
         <activity android:name=".activities.doctors.DoctorInfoActivity"></activity>
         <activity android:name=".activities.medicine.MedicineInfoActivity"></activity>
+        <activity android:name=".activities.appointments.AppointmentsActivity"></activity>
+        <activity android:name=".activities.appointments.AppointmentActivity"></activity>
     </application>
 
 </manifest>
