--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
+        android:name=".MyMedApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyMedApplication"
         android:theme="@style/AppTheme">
+        <service
+            android:name=".services.RemindersService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="barcode" />
@@ -33,13 +38,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.search.SearchMedicineActivity"></activity>
-        <activity android:name=".activities.doctors.DoctorInfoActivity"></activity>
-        <activity android:name=".activities.medicine.MedicineInfoActivity"></activity>
-        <activity android:name=".activities.appointments.AppointmentsActivity"></activity>
-        <activity android:name=".activities.appointments.AppointmentActivity"></activity>
-        <activity android:name=".activities.perceptions.PerceptionsActivity"></activity>
-        <activity android:name=".activities.perceptions.PerceptionActivity"></activity>
+        <activity android:name=".activities.search.SearchMedicineActivity" />
+        <activity android:name=".activities.doctors.DoctorInfoActivity" />
+        <activity android:name=".activities.medicine.MedicineInfoActivity" />
+        <activity android:name=".activities.appointments.AppointmentsActivity" />
+        <activity android:name=".activities.appointments.AppointmentActivity" />
+        <activity android:name=".activities.perceptions.PerceptionsActivity" />
+        <activity android:name=".activities.perceptions.PerceptionActivity" />
     </application>
 
 </manifest>
