added the config for releasing a version"

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,8 @@
 /build
 /captures
 .externalNativeBuild
+
+# Google Services (e.g. APIs or Firebase)
 google-services.json
+*.jks
+keystore.properties
