--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,5 +55,7 @@ dependencies {
     implementation "androidx.camera:camera-core:1.0.0-alpha04"
     implementation "androidx.camera:camera-camera2:1.0.0-alpha04"
 
+    implementation 'sun.bob:mcalendarview:1.0.0'
+
 }
 apply plugin: 'com.google.gms.google-services'  // Google Play services Gradle
